# spark-resource-optimizer

./: .dockerignore  .env.example  .env.test  DEPENDENCY_UPDATE_PLAN.md  Dockerfile  README.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  quick_demo.sh  requirements.txt  setup.py  smoke_test.py
.github/workflows/: aws-emr-integration.yml  ci-status.md  codeql.yml  databricks-integration.yml  docker-integration-test.yml  docker.yml  e2e-tests.yml  gcp-dataproc-integration.yml  lint.yml  pr-checks.yml  quickstart-test.yml  release.yml  smoke-test.yml  stale.yml  test.yml
alembic/: env.py
alembic/versions/: 17500dfe2f3a_initial_database_schema.py
docs/: AWS_EMR_INTEGRATION.md  DATABRICKS_INTEGRATION.md  GCP_DATAPROC_INTEGRATION.md  api-reference.md  architecture.md  authentication.md  ci-cd.md  data-collection.md  database-migration.md  docker-deployment.md
examples/: auto_tuning_example.py  cost_optimization_example.py  emr_collection_example.py  monitoring_example.py
helm/spark-resource-optimizer/: Chart.yaml  README.md  values.yaml
helm/spark-resource-optimizer/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
original-docs/: comprehensive_docs.md  spark_optimizer_structure.md
scripts/: setup_db.py  test_docker.py  test_docker_integration.py
spark-jobs/: README.md  cpu_intensive_job.py  memory_intensive_job.py  skewed_data_job.py
src/spark_optimizer/analyzer/: feature_extractor.py  job_analyzer.py  similarity.py
src/spark_optimizer/api/: cost_routes.py  metrics_routes.py  monitoring_routes.py  routes.py  schemas.py  server.py  tuning_routes.py
src/spark_optimizer/auth/: __init__.py  middleware.py  models.py  routes.py  utils.py
src/spark_optimizer/cli/: commands.py
src/spark_optimizer/collectors/: __init__.py  databricks_collector.py  dataproc_collector.py  emr_collector.py  event_log_collector.py  history_server_collector.py  metrics_collector.py
src/spark_optimizer/cost/: cloud_pricing.py  cost_comparison.py  cost_model.py  cost_optimizer.py
src/spark_optimizer/monitoring/: alerts.py  monitor.py  websocket_server.py
src/spark_optimizer/recommender/: base_recommender.py  ml_recommender.py  rule_based_recommender.py  similarity_recommender.py
src/spark_optimizer/storage/: database.py  models.py  repository.py
src/spark_optimizer/tuning/: auto_tuner.py  config_adjuster.py  feedback_loop.py
src/spark_optimizer/utils/: config.py
tests/: conftest.py
tests/test_analyzer/: test_similarity.py
tests/test_api/: test_routes.py  test_server.py
tests/test_collectors/: test_databricks_collector.py  test_dataproc_collector.py  test_emr_collector.py  test_event_log_collector.py  test_history_server_collector.py
tests/test_cost/: __init__.py  test_cloud_pricing.py  test_cost_model.py  test_cost_optimizer.py
tests/test_monitoring/: test_alerts.py  test_monitor.py  test_websocket_server.py
tests/test_recommender/: test_ml_recommender.py  test_similarity_recommender.py
tests/test_storage/: test_repository.py
tests/test_tuning/: __init__.py  test_auto_tuner.py  test_config_adjuster.py  test_feedback_loop.py
web-ui/: README.md
web-ui-dashboard/: .gitignore  README.md  angular.json  package.json  playwright.config.ts  pnpm-lock.yaml
web-ui-dashboard/e2e/: README.md  analytics.spec.ts  dashboard.spec.ts  recommendations.spec.ts
web-ui-dashboard/src/app/: app.component.css  app.routes.ts  app.ts
web-ui-dashboard/src/app/components/charts/: charts.ts
web-ui-dashboard/src/app/components/cost/: cost.ts
web-ui-dashboard/src/app/components/dashboard/: dashboard.component.css  dashboard.component.ts  dashboard.ts
web-ui-dashboard/src/app/components/monitoring/: monitoring.ts
web-ui-dashboard/src/app/components/recommendations/: recommendations.component.css  recommendations.component.ts  recommendations.ts
web-ui-dashboard/src/app/components/tuning/: tuning.ts
web-ui-dashboard/src/app/models/: job.model.ts  recommendation.model.ts
web-ui-dashboard/src/app/services/: api.service.ts  config.service.ts
web-ui/spark-optimizer-dashboard/: angular.json  package.json
web-ui/spark-optimizer-dashboard/src/: index.html  styles.css
web-ui/spark-optimizer-dashboard/src/app/: app.component.html  app.ts
(+5 files in other folders)
