[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-optimizer"
version = "0.1.0"
description = "An open-source tool that analyzes historical Spark job runs to recommend optimal resource configurations"
readme = "README.md"
authors = [
    {name = "Gridatek", email = "hello@gridatek.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    # Spark
    "pyspark>=3.0.0",

    # Data processing
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",

    # Database
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "psycopg2-binary>=2.9.0",

    # API
    "flask>=2.0.0",
    "flask-restful>=0.3.9",
    "flask-cors>=3.0.10",

    # Configuration
    "pyyaml>=5.4.0",
    "python-dotenv>=0.19.0",

    # Logging
    "loguru>=0.6.0",

    # Data validation
    "pydantic>=1.9.0",

    # HTTP client
    "requests>=2.27.0",

    # CLI
    "click>=8.0.0",
    "tabulate>=0.9.0",

    # Utilities
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "flake8-docstrings>=1.6.0",
    "flake8-bugbear>=22.0.0",
    "mypy>=0.990",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.0",
    "types-tabulate>=0.9.0",
    "pre-commit>=2.20.0",
    "bandit>=1.7.0",
]
aws = [
    "boto3>=1.26.0",
]
gcp = [
    "google-cloud-dataproc>=5.0.0",
    "google-cloud-monitoring>=2.11.0",
]
# Note: databricks extra removed as it only had requests which is already a core dependency

[project.urls]
Homepage = "https://github.com/gridatek/spark-optimizer"
Repository = "https://github.com/gridatek/spark-optimizer"
Issues = "https://github.com/gridatek/spark-optimizer/issues"

[project.scripts]
spark-optimizer = "spark_optimizer.cli.commands:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=spark_optimizer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: integration tests",
    "slow: slow running tests",
    "e2e: end-to-end tests",
]

[tool.coverage.run]
source = ["src/spark_optimizer"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
follow_imports = "normal"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
]
skips = [
    "B101",  # assert_used
    "B601",  # paramiko_calls
]
